# smart-note-processor

./: .gitignore  ApiExploration.md  Details.md  README.md  Tasks.md  requirements.txt
SmartNoteProcessor/: TODO  app.py  database.py  gunicorn_config.py  main.py  models.py  orchestrator.py  pyproject.toml  replit.nix  requirements.txt  start.sh
SmartNoteProcessor/attached_assets/: Pasted-Project-for-the-Creation-of-an-AI-Based-Note-Generation-System-1-Introduction-The-volume-and-variet-1744560494693.txt  Pasted-System-Structure-Smart-Notes-Processor-Conceptual-Diagram-General-Flow-Text-PDF-Sources-To-1744560463364.txt
SmartNoteProcessor/instance/: smartnotes.db
SmartNoteProcessor/static/css/: custom.css
SmartNoteProcessor/static/js/: main.js  results_chat.js
SmartNoteProcessor/templates/: index.html  layout.html  results.html
SmartNoteProcessor/utils/: document_processor.py  format_converter.py  gemini_client.py  image_analyzer.py  merge_topics.py  openrouter_client.py  resumes_enhancer.py  summary_extractor.py  topic_extractor.py
